# git-foreach

./: .goreleaser.yaml  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  deny.toml  dist-workspace.toml  mise.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
git-foreach/: Cargo.toml
git-foreach/src/: error.rs  main.rs
git-walk/: Cargo.toml
git-walk/src/: error.rs  lib.rs  walk.rs
src/: error.rs  main.rs  walk.rs
