[package]
name = "git-foreach"
description = "Run a command in each git repository in a directory"
version = "0.4.0"
edition = "2021"
license-file = "LICENSE"
homepage = "https://github.com/marcfrederick/git-foreach"
repository = "https://github.com/marcfrederick/git-foreach"

[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
clap = { version = "4.5.8", features = ["derive", "cargo"] }
ignore = "0.4.22"
rayon = "1.10.0"
thiserror = "1.0.61"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.17.0"
# CI backends to support
ci = "github"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "marcfrederick/homebrew-tap"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Whether to enable GitHub Attestations
github-attestations = true
