[package]
name = "git-foreach"
description = "Run a command in each git repository in a directory"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/marcfrederick/git-foreach"
repository = "https://github.com/marcfrederick/git-foreach"

[dependencies]
clap = { version = "4.5.9", features = ["derive", "cargo"] }
git-walk = { path = "../git-walk" }
thiserror = "1.0.62"
rayon = "1.10.0"
