[package]
name = "git-foreach"
description = "Run a command in each git repository in a directory"
version = "0.4.4"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/marcfrederick/git-foreach"
repository = "https://github.com/marcfrederick/git-foreach"

[dependencies]
clap = { version = "4.5.48", features = ["derive", "cargo"] }
git-walk = { path = "../git-walk" }
rayon = "1.10.0"

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1
panic = 'abort'
