[package]
name = "git-walk"
description = "Iterate over git repositories in a directory"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/marcfrederick/git-foreach"
repository = "https://github.com/marcfrederick/git-foreach"

[dependencies]
ignore = "0.4.22"
thiserror = "1.0.63"
